# Pepermint_task1_abhishek

./: README.md  green.ipynb
Thresholding Task/: green_ball_thresh.ipynb
green_sphere_navigator/: package.xml  setup.cfg  setup.py
green_sphere_navigator/green_sphere_navigator/: controller_node.py  vision_node.py
green_sphere_navigator/launch/: follow_sphere.launch.py
green_sphere_navigator/models/: sphere.sdf
